test/invalid/naked_array.js

function test() {
    var result = [];
    result[0] = 2;
    return result[0];
}

var s = 'a';
s = test();
